[package]
name = "pieralyzer"
version = "0.1.1"
edition = "2021"
authors = ["l-bianchi", "dpiada"]
license = "MIT"
description = "An awesome CLI tool that will start your pier-life!"
readme = "README.md"
homepage = "https://github.com/l-bianchi/pieralyzer"
repository = "https://github.com/l-bianchi/pieralyzer"
keywords = ["cli", "replace", "demo", "fun"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
